force-app/main/default/objects/Shift/Shift.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>