force-app/main/default/objects/Shift/fields/FSM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_EndDate__c</fullName>
    <formula>DATEVALUE(EndTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>