force-app/main/default/objects/Shift/fields/FSM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_StartDate__c</fullName>
    <formula>DATEVALUE(StartTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>