force-app/main/default/objects/Shift/fields/FSM_TimeSheetId__c.field-meta.xml
<CustomField>
    <fullName>FSM_TimeSheetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of SFI-1557</description>
    <label>Time Sheet</label>
    <referenceTo>TimeSheet</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>