force-app/main/default/objects/Shift/fields/FSM_TypeofRota__c.field-meta.xml
<CustomField>
    <fullName>FSM_TypeofRota__c</fullName>
    <description>Created as part of SFI-668</description>
    <label>Type of Rota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>