force-app/main/default/objects/Shift/listViews/All_Shifts.listView-meta.xml
<ListView>
    <fullName>All_Shifts</fullName>
    <columns>Name</columns>
    <columns>ServiceResource</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>FSM_StartDate__c</columns>
    <columns>FSM_StartTime__c</columns>
    <columns>FSM_EndDate__c</columns>
    <columns>FSM_EndTime__c</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>Status</columns>
    <columns>RecordsetFilterCriteria</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceResource</field>
        <operation>contains</operation>
        <value>city flex 05a ce</value>
    </filters>
    <label>All Shifts</label>
</ListView>