force-app/main/default/objects/Shift/listViews/Metering_shift_removal.listView-meta.xml
<ListView>
    <fullName>Metering_shift_removal</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>ServiceResource</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <columns>JobProfile</columns>
    <columns>FSM_StartDate__c</columns>
    <columns>FSM_StartTime__c</columns>
    <columns>FSM_EndDate__c</columns>
    <columns>FSM_EndTime__c</columns>
    <columns>RecordsetFilterCriteria</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedBy</field>
        <operation>contains</operation>
        <value>ngar</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <filters>
        <field>ServiceResource</field>
        <operation>notContain</operation>
        <value>team</value>
    </filters>
    <label>Metering shift removal</label>
    <sharedTo>
        <group>FSM_BusinessAdminGroup</group>
        <group>FSM_Metering</group>
    </sharedTo>
</ListView>