force-app/main/default/objects/Shift/listViews/Shift_tidy.listView-meta.xml
<ListView>
    <fullName>Shift_tidy</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>ServiceResource</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <columns>JobProfile</columns>
    <columns>RecordsetFilterCriteria</columns>
    <columns>IsHolidayShift</columns>
    <columns>FSM_StartTime__c</columns>
    <columns>FSM_EndTime__c</columns>
    <columns>Label</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <filters>
        <field>CreatedBy</field>
        <operation>contains</operation>
        <value>Astew</value>
    </filters>
    <filters>
        <field>StartTime</field>
        <operation>greaterOrEqual</operation>
        <value>1/19/2026 12:00 AM</value>
    </filters>
    <label>Shift tidy</label>
    <sharedTo>
        <group>FSM_WaterInfra</group>
    </sharedTo>
</ListView>